tests/neg-inline-trait/disallow-class-in-inline-trait.scala
inline trait Foo:
    class Bar // error
